--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-paper": "^5.12.5",
+    "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0"
