--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "CleanArchitectureTemplateApp",
-  "displayName": "CleanArchitectureTemplateApp"
+  "name": "PokemonApp",
+  "displayName": "PokemonApp"
 }
